--- a/artifacts/java_utils/pom.xml
+++ b/artifacts/java_utils/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>self.keychera</groupId>
-  <artifactId>java_scripts</artifactId>
+  <artifactId>java_utils</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>java_scripts</name>
+  <name>java_utils</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
