--- a/resavant/modules/scripts_java/pom.xml
+++ b/resavant/modules/scripts_java/pom.xml
@@ -30,6 +30,11 @@
       <artifactId>javaparser-symbol-solver-core</artifactId>
       <version>3.15.7</version>
     </dependency>
+    <dependency>
+      <groupId>com.atlassian.clover</groupId>
+      <artifactId>clover</artifactId>
+      <version>4.1.2</version>
+    </dependency>
   </dependencies>
 
   <build>
