--- a/resavant/modules/scripts_java/pom.xml
+++ b/resavant/modules/scripts_java/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>clover</artifactId>
       <version>4.1.2</version>
     </dependency>
+    <dependency>
+      <groupId>daikon</groupId>
+      <artifactId>daikon</artifactId>
+      <version>5.2.8</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -93,6 +98,27 @@
             <goals>
               <goal>shade</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>2.5.2</version>
+        <executions>
+          <execution>
+            <phase>initialize</phase>
+            <goals>
+              <goal>install-file</goal>
+            </goals>
+            <configuration>
+              <!-- TODO make this not hardcoded somehow -->
+              <file>/home/square/Documents/libs/daikon-5.2.8/daikon.jar</file>
+              <groupId>daikon</groupId>
+              <artifactId>daikon</artifactId>
+              <version>5.2.8</version>
+              <packaging>jar</packaging>
+            </configuration>
           </execution>
         </executions>
       </plugin>
