--- a/resavant/modules/scripts_java/pom.xml
+++ b/resavant/modules/scripts_java/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>daikon</artifactId>
       <version>5.2.8</version>
     </dependency>
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.10</version>
+    </dependency>
   </dependencies>
 
   <build>
